objects/Machine_Model_Product__c.object
<CustomObject>
    <description>Machine Model Products</description>
    <fields>
        <fullName>Adoption_Rate__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>How many % of this machine model utilize this product?</inlineHelpText>
        <label>Adoption Rate %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_Display_Formula__c</fullName>
        <formula>Customer_Material_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Material Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitiveness__c</fullName>
        <inlineHelpText>Your perceived competitiveness of Danfoss with regards to this product in this machine model</inlineHelpText>
        <label>Danfoss Competitiveness</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Material_Number__c</fullName>
        <label>Customer Material Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSAPPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>set by Product Picker code (AddLineItems class) if an SAP price is returned</description>
        <label>IsSAPPrice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Machine_Model_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.SAP_Material_Code__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Machine Model Products</relationshipLabel>
        <relationshipName>Machine_Model_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Machine_Model__c</fullName>
        <label>Machine Model</label>
        <referenceTo>Machine_Model__c</referenceTo>
        <relationshipLabel>Machine Model Products</relationshipLabel>
        <relationshipName>Machine_Model_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Number_per_machine__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Units per machine</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price per unit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>Machine_Model_Product__r.Family__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <label>Product Characteristic</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Closed Center Non Reaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Center Reaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Center Non Reaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Center Reaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load Sensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load Sensing Reaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Beyond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Actuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydraulic Pilot Actuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Actuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydraulic 2-position Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydraulic Proportional Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric 2-position Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric Proportional Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric Displacement Control (EDC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Displacement Control (MDC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydraulic Displacment Control (HDC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Displacment Control (DDC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forward/Neutral/Reverse (FNR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric Automotive/Load Dependent (AC, NFPE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydraulic Automotive/Load Dependent (DA, NFPH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pressure Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load Sensing Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Torque Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Displacement Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydraulic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN bus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>Machine_Model_Product__r.Product_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Set__c</fullName>
        <formula>Machine_Model_Product__r.Product_Set__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <controllingField>Subsystem__c</controllingField>
            <picklistValues>
                <fullName>Transmission Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transmission Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transmission Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydraulic Steering Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Priority Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steering Amplifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrohydraulic Steering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan Drive Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan Drive Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working Function Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working Function Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joystick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan Drive Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telematics Solution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_Material_Number__c</fullName>
        <formula>Machine_Model_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Material Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Price_Retrieved_Date_Display__c</fullName>
        <formula>SAP_Price_Retrieved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Price Retrieved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SAP_Price_Retrieved_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>SAP Price Retrieved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SAP_Product_Hierarchy_Code__c</fullName>
        <formula>Machine_Model_Product__r.SAP_Product_Set_Code__c</formula>
        <label>SAP Product Hierarchy Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Product_Line_Code__c</fullName>
        <formula>Machine_Model_Product__r.SAP_Product_Line_Code__c</formula>
        <label>SAP Product Line Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_Competitiveness_Reason__c</fullName>
        <label>Danfoss Competitiveness - Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual/Multiple Sourcing Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Display__c</fullName>
        <formula>Sales_Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsystem__c</fullName>
        <label>Machine Function</label>
        <picklist>
            <picklistValues>
                <fullName>Steering Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HMI and Electronics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <formula>TEXT(Machine_Model_Product__r.Business_Org__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Product_units__c</fullName>
        <formula>Machine_Model__r.Annual_Production_Volume_Plus3__c * Number_per_machine__c * Adoption_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Product Potential (units)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Product_value__c</fullName>
        <formula>Machine_Model__r.Annual_Production_Volume_Plus3__c * Number_per_machine__c * Price__c * Adoption_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Product Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Machine Model Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Supplier__c</columns>
        <columns>Machine_Model_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with supplier</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Machine Model Material</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Machine Model Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>